[gd_scene load_steps=10 format=3 uid="uid://ceanward1yj0a"]

[ext_resource type="PackedScene" uid="uid://dg035xci6inme" path="res://Scene/InteractionPopup.tscn" id="1_3wigi"]
[ext_resource type="Script" uid="uid://b4d4q52u7gl6j" path="res://Scene/Home/vaiselle_popup.gd" id="2_u7n8w"]
[ext_resource type="Texture2D" uid="uid://b06xbdprqcju3" path="res://Assets/Home/vaiselle/IMG_0833.png" id="3_u7n8w"]
[ext_resource type="Script" uid="uid://bfvhj1mmd1h8c" path="res://Scripts/Tram/move_arm.gd" id="5_0qi5r"]
[ext_resource type="Texture2D" uid="uid://p4oax8odfti2" path="res://Assets/Home/vaiselle/IMG_0847.png" id="6_ecxgh"]
[ext_resource type="Texture2D" uid="uid://6n0xft0opkbg" path="res://Assets/Home/vaiselle/IMG_0843.png" id="7_g5xge"]
[ext_resource type="Texture2D" uid="uid://bjen3jussurjj" path="res://Assets/Home/vaiselle/IMG_0841.png" id="8_at12p"]
[ext_resource type="Texture2D" uid="uid://b84u4jdbvgh6y" path="res://Assets/Home/vaiselle/IMG_0842.png" id="9_v7dfa"]
[ext_resource type="Texture2D" uid="uid://dc3rectcjri4b" path="res://Assets/Leg.png" id="11_1d3cv"]

[node name="VaisellePopup" instance=ExtResource("1_3wigi")]
script = ExtResource("2_u7n8w")

[node name="Popup" parent="." index="1"]
offset_top = 0.0
offset_bottom = 249.0

[node name="Elements" type="Node2D" parent="Popup/PanelContainer/Background" index="0"]
position = Vector2(-10, -10)

[node name="Img0833" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements" index="0"]
position = Vector2(129.281, 129.281)
scale = Vector2(0.116913, 0.116913)
texture = ExtResource("3_u7n8w")

[node name="Leg" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements" index="1"]
z_index = 8
position = Vector2(76, 284)
rotation = 0.187329
scale = Vector2(0.138396, 0.143263)
skew = 0.0698131
texture = ExtResource("11_1d3cv")
offset = Vector2(-128.385, 577.293)
script = ExtResource("5_0qi5r")

[node name="Leg2" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Leg" index="0"]
z_index = -2
position = Vector2(102.252, -213.184)
scale = Vector2(0.42177, 0.42177)
texture = ExtResource("6_ecxgh")
offset = Vector2(-128.385, 577.293)

[node name="Img0843" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements" index="2"]
position = Vector2(129, 79)
scale = Vector2(0.189151, 0.189151)
texture = ExtResource("7_g5xge")

[node name="Img0841" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements" index="3"]
position = Vector2(135, 98)
scale = Vector2(0.243473, 0.243473)
texture = ExtResource("8_at12p")

[node name="Img0842" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements" index="4"]
position = Vector2(79, 94)
scale = Vector2(0.243473, 0.243473)
texture = ExtResource("9_v7dfa")
